--- a/styles.css
+++ b/styles.css
@@ -133,20 +133,19 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 2.5% 5%;
+    padding: 6% 5%;
 }
 
 .action-box {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    align-items: center;
     background-color: #3882F6;
-    border-radius: 4px;
+    border-radius: 6px;
+    padding: 2.5% 5%;
+    gap: 64px;
 }
 
-.action-text {
-    padding: 5% 10%;
-}
 
 .action-main-text {
     color: #F9FAF8;
@@ -155,4 +154,27 @@ h1 {
 
 .action-sub-text {
     color: #F9FAF8;
+    font-size: 10px;
+    font-weight: 300;
+}
+
+.action-signup {
+    color: #F9FAF8;
+    border: 1px solid #F9FAF8;
+    border-radius: 4px;
+    background-color: #3882F6;
+    padding: 2px 15px;
+    font-size: 10px;
+    font-weight: 600;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    background-color: #1F2937;
+    color:#E5E7EB;;
+    padding: 2% 0;
 }
